--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html, button, input {
     line-height: 1.5rem;
     letter-spacing: .1rem;
     font-family: 'Raleway', sans-serif;
+    scroll-behavior: smooth;
 }
 
 h1 {
     font-family: 'Shalimar', cursive;
     font-size: 4rem;
+    margin: 20px;
+}
+
+p {
+    margin: 20px;
+}
+
+
+@media screen and (max-width: 800px) {
+    html {
+        line-height: 3rem;
+    }
 }
